Some Overlay sections do not respect Overlay On/Off toggle #62774

Closed
opened 2019-03-20 14:14:15 +01:00 by Ian Finnimore · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-15 00:41, hash: 388ff003e2
Worked: (optional)

Short description of error
The following Overlay option sections disable/enable when the "Display Overlays" [overlay.show_overlays] is toggled, but the selected options remain visible when Display Overlays is disabled:
Mesh Edit Mode
Shading
Measurement
Normals
Developer
[Freestyle untested]

Exact steps for others to reproduce the error
Cube in edit mode, turn on overlay option from one or more of these sections. Toggle display overlay off, and see the selected overlay remain on screen.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-15 00:41, hash: `388ff003e2` Worked: (optional) **Short description of error** The following Overlay option sections disable/enable when the "Display Overlays" [overlay.show_overlays] is toggled, but the selected options remain visible when Display Overlays is disabled: Mesh Edit Mode Shading Measurement Normals Developer [Freestyle untested] **Exact steps for others to reproduce the error** Cube in edit mode, turn on overlay option from one or more of these sections. Toggle display overlay off, and see the selected overlay remain on screen.
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn

#58252 was marked as duplicate of this issue

#58252 was marked as duplicate of this issue

Added subscribers: @fclem, @brecht, @WilliamReynish

Added subscribers: @fclem, @brecht, @WilliamReynish

This is a known issue with edit mode.

@fclem @brecht I thought the conclusion was that we should allow for completely hiding edit mode overlays when Overlays are turned off?

This was needed anyway for the workflows where users might have a different viewport set to Rendered, where they can see the edit mode results without edit mode overlays.

This is a known issue with edit mode. @fclem @brecht I thought the conclusion was that we should allow for completely hiding edit mode overlays when Overlays are turned off? This was needed anyway for the workflows where users might have a different viewport set to Rendered, where they can see the edit mode results without edit mode overlays.
Jeroen Bakker was assigned by Clément Foucault 2019-03-20 15:51:20 +01:00

Added subscribers: @nezumi, @paleajed-3, @lichtwerk

Added subscribers: @nezumi, @paleajed-3, @lichtwerk

This issue was referenced by 30fbf905ef

This issue was referenced by 30fbf905ef8bd587eef43030b81d75b9eb704bec
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62774
No description provided.